# papyri

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  PLAN.md  REVIEW_2026-05-28.md  REVIEW_2026-05-31_maintainability.md  Readme.md  TODO  TODO-renames.md  TODO-review.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  tree_sitter_rst_bug.py
.github/workflows/: claude-review.yml  cloudflare-pages.yml  deploy-cloudflare.yml  gen-from-source.yml  ingest.yml  lint.yml  python-package.yml  viewer.yml  zizmor.yml
docs/: IR-NODE-AUDIT.md  IR.md  configuration.md  configuration.rst  index.rst  injecting.rst
docs/examples/: simple_plot.py
docs/specimens/: admonitions.rst  blocks.rst  crossrefs.rst  index.rst  inline.rst  tables-and-math.rst
examples/: IPython.toml  astropy.toml  build_numpy.sh  build_scipy.sh  gallery1.py  ipykernel.toml  ipython_inject.py  matplotlib.toml  numpy.toml  papyri.toml  scipy.toml  skimage.toml  traitlets.toml
frontend/: package.json
frontend/src/: index.js
ingest/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
ingest/migrations/: 0000_init.sql  0001_bundles.sql  0001_external_inventory.sql  0001_init.sql  0002_bundles.sql  0002_indexes.sql  0003_bundle_content_hash.sql  0003_external_inventory.sql  0004_indexes.sql  0005_bundle_content_hash.sql  0006_node_index.sql  0007_indexes.sql
ingest/src/: blob-store.ts  bundle.ts  cli.ts  encoder.ts  fs-safe.ts  graph-db.ts  graphstore.ts  index.ts  ingest.ts  inventory.ts  keys.ts  raw-store.ts  url-safety.ts  visitor.ts
ingest/tests/: encoder.test.ts  fs-safe.test.ts  inventory.test.ts  migrations.test.ts  post_upload.test.ts  url-safety.test.ts  visitor.test.ts
papyri/: __init__.py  _progress.py  browser.py  bundle.py  bundle_edit.py  common_ast.py  config.py  config_loader.py  crosslink.py  directives.py  doc.py  error_collector.py  examples.py  executors.py  gen.py  graphstore.py  ingested_doc.py  intersphinx.py  miniserde.py  misc.py  miscs.py  myst_ast.py  myst_serialiser.py  node_base.py  node_serializer.py  nodes.py  numpydoc_compat.py  pack.py  r.py  render.py  serde.py  signature.py  take2.py  toc.py  tokens.py  tree.py  ts.py  user_config.py  utils.py  vref.py
papyri/cli/: __init__.py  about.py  bootstrap.py  debug.py  describe.py  diff.py  drop.py  find.py  gen.py  ingest.py  lint.py  pack.py  relink.py  unpack.py  upload.py
papyri/templates/: ascii.tpl.j2  head.tpl.j2  html.tpl.j2  macros.tpl.j2  toctree.tpl.j2
papyri/tests/: conftest.py  test_bundle_edit.py  test_cbor_roundtrip.py  test_cli_debug.py  test_cli_upload.py  test_corpus.py  test_diagnostics.py  test_error_collector.py  test_gen.py  test_golden.py  test_graphstore.py  test_intersphinx.py  test_ipython_gen.py  test_nodes.py  test_normalise_ref.py  test_pack.py  test_parse.py  test_postingest.py  test_signatures.py  test_take2.py  test_toc.py  test_tree.py  test_user_config.py  utils.py
papyri/tests/corpus/: no-space-parenthesis.expected.txt  test.expected.txt
papyri/tests/golden/: ipython_display_extended.rst  numpy_arange_extended.rst  numpy_linspace_extended.rst
papyri/tests/postingest/: example1_signature.json  examples_module_has_paragraph.json  numpy_linspace_has_signature.json
prototype/rust-viewer/: Cargo.toml  README.md
prototype/rust-viewer/fixtures/: demo.papyri  make_fixture.py
prototype/rust-viewer/src/: db.rs  ir.rs  main.rs  render.rs
prototype/rust-viewer/templates/: style.css
scripts/: check_ir_sync.py  gen_ir_schema.py
src/: lib.rs  pack.rs
tools/: vendor_scripts.sh
upload-api/: package.json  wrangler.toml
upload-api/src/: auth.ts  index.ts  trigger.ts
viewer/: .gitignore  .npmrc  .prettierrc.json  DEPLOY.md  Dockerfile  PLAN.md  README.md  TODO.md  astro.config.mjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
viewer/migrations/: 0000_init.sql
viewer/scripts/: fetch-inventories.mjs  seed-wrangler.mjs
viewer/src/: env.d.ts  middleware.ts
viewer/src/components/: AccountSettingsPanel.tsx  BundleCard.astro  BundleGridSearch.tsx  BundleSearch.tsx  BundleSidebar.astro  BundleSidebarTocItem.astro  DocSwitcher.tsx  (+27 more)
viewer/tests/: auth-db.test.ts  bundle-ingest.test.ts  crosslink.test.ts  e2e-pipeline.test.ts  external.test.ts  graph.test.ts  highlight.test.ts  inventory.test.ts  ir-reader-cbor.test.ts  ir-reader-fs.test.ts  ir-reader-msgpack.test.ts  ir-reader-pure.test.ts  math.test.ts  nav.test.ts  paths.test.ts  qualname-page.test.ts  render-node.test.ts  search.test.ts  signature.test.ts  ssrf-guard.test.ts  surface.test.ts  theme.test.ts  version-utils.test.ts  xref.test.ts
(+322 files in other folders)
