[package]
name = "papyri-pack"
version = "0.0.10"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1"
rayon = "1"
flate2 = "1"

[lib]
name = "papyri_pack"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
