[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papyri"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.14"
dependencies = [
    "black",
    "cbor2",
    "ipython",
    "jedi",
    "matplotlib",
    "numpydoc",
    "pygments",
    "rich",
    "tomli_w",
    "tree-sitter<0.22",
    "tree_sitter_languages>=1.5",
    "typer>=0.9",
    "velin",
]

[project.scripts]
papyri = "papyri:app"

[tool.pytest.ini_options]
addopts = "--durations=10"
filterwarnings = "ignore:The module numpy.dual.*:DeprecationWarning"

[project.urls]
Home = "https://github.com/carreau/papyri"

[tool.mypy]
python_version = '3.14'
ignore_missing_imports = true

[tool.black]
# Pin below 3.14 so black doesn't auto-apply PEP 758 (unparenthesized
# `except`) reformatting from `requires-python = ">=3.14"`. The package
# still requires 3.14+; this just keeps the source parseable by older
# Pythons during linting and tooling passes.
target-version = ["py313"]
