[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papyri"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.14"
dependencies = [
    "cbor2",
    "ipython",
    "jedi",
    "matplotlib",
    "numpydoc",
    "pygments",
    "rich",
    "tomli_w",
    "tree-sitter>=0.24",
    "tree-sitter-language-pack",
    "typer>=0.9",
    "velin",
]

[project.scripts]
papyri = "papyri:app"

[tool.pytest.ini_options]
addopts = "--durations=10"
filterwarnings = "ignore:The module numpy.dual.*:DeprecationWarning"

[project.urls]
Home = "https://github.com/carreau/papyri"

[tool.mypy]
python_version = '3.14'
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
# Pin below 3.14 so ruff's formatter doesn't auto-apply PEP 758
# (unparenthesized `except`) reformatting from `requires-python = ">=3.14"`.
# The package still requires 3.14+; this just keeps the source parseable by
# older Pythons during linting and tooling passes.
target-version = "py313"
line-length = 88
extend-exclude = ["node_modules", "jupyter_server_test_config.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = [
    "E201",   # Whitespace after '('
    "E202",   # Whitespace before ')'
    "E203",   # Whitespace before ':'
    "E231",   # Missing whitespace after ','
    "E241",   # Multiple spaces after ','
    "E261",   # At least two spaces before inline comment
    "E262",   # Inline comment should start with '# '
    "E265",   # Block comment should start with '# '
    "E266",   # Too many leading '#' for block comment
    "E303",   # Too many blank lines
    "E401",   # Multiple imports on one line
    "E402",   # Module level import not at top of file
    "E501",   # Line too long (handled by formatter)
    "E721",   # Do not compare types, use isinstance()
    "E731",   # Do not assign a lambda expression
    "E741",   # Ambiguous variable name
    "F811",   # Redefinition of unused name
    "B008",   # typer.Option() in function defaults is the intended typer pattern
    "UP040",  # `type` keyword requires Python 3.12+; local runtime is 3.11
]
mccabe.max-complexity = 50
